# cosmosswap-fusion

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/controllers/: oneInchController.js  swapController.js
backend/src/middleware/: cors.js  rateLimit.js
backend/src/routes/: oneInch.js  swap.js
backend/src/services/: coordinatorService.js  cosmosService.js  ethereumService.js  oneInchService.js
backend/src/utils/: logger.js  validation.js
contracts/cosmos/: Cargo.toml
contracts/cosmos/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/ethereum/: hardhat.config.js  package-lock.json  package.json
contracts/ethereum/contracts/: CosmosSwapEthereum.sol  IERC20.sol  MockERC20.sol  ReentrancyGuard.sol
contracts/ethereum/scripts/: deploy.js
contracts/ethereum/test/: CosmosSwap.test.js
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  index.css  index.html  main.tsx
frontend/src/components/: AnalyticsDashboard.tsx  Footer.tsx  Header.tsx  SwapInterface.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TransactionHistory.tsx  WalletConnect.tsx
frontend/src/hooks/: useCosmos.ts  useOneInch.ts  useSwap.ts  useWeb3.ts
frontend/src/services/: api.ts  bridgeApi.ts  cosmos.ts  cosmosApi.ts  ethereum.ts  oneInchApi.ts
frontend/src/utils/: types.ts  (+2 more)
scripts/: complete-setup.sh  deploy-all.sh  setup.sh
(+9 files in other folders)
